@@ -23,6 +23,8 @@
             <li><a href="filterMenu.html">Filters</a></li>
             <li><a href="spectraMenu.html">Spectra</a></li>
             <li><a href="gateMenu.html">Gate</a></li>
+	    <li><a href="prefs.html">Edit->Preferences..</a>
+	       which allows you to edit GUI preferences.</li>
         </ul>
 
     <p>
