@@ -31,3 +31,4 @@ package ifneeded applygate    1.0 [list source [file join $dir applygate.tcl]]
 package ifneeded datasource   1.0 [list source [file join $dir datasource.tcl]]
 package ifneeded filtercontrol 1.0 [list source [file join $dir filtercontrol.tcl]]
 package ifneeded edit2dmulti 1.0  [list source [file join $dir edit2dmulti.tcl]]
+package ifneeded preferences 1.0 [list source [file join $dir prefs.tcl]]
